--- a/OOPGame/index.html
+++ b/OOPGame/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <script src="js/resources.js"></script>
+    <script src="js/board.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
 </body>
