--- a/OOPGame/test/tests.html
+++ b/OOPGame/test/tests.html
@@ -11,6 +11,7 @@
     <script src="vendors/mocha.js"></script>
     <script src="vendors/sinon.js"></script>
     <script src="../js/resources.js"></script>
+    <script src="../js/board.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/engine.js"></script>
     <script>mocha.setup('bdd');</script>
