--- a/OOPGame/test/tests.html
+++ b/OOPGame/test/tests.html
@@ -8,8 +8,9 @@
     <div id="mocha"></div>
     <script src="vendors/jquery.js"></script>
     <script src="vendors/chai.js"></script>
-    <script src="vendors/mocha.js"></script>
     <script src="vendors/sinon.js"></script>
+    <script src="vendors/sinon-chai.js"></script>
+    <script src="vendors/mocha.js"></script>
     <script src="../js/resources.js"></script>
     <script src="../js/board.js"></script>
     <script src="../js/app.js"></script>
