Testing my gh sync

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<h1>Welcome!  Below are some live projects I have to show</h1>
 	<a href="OOPGame">Frogger-like game</a>    
 </body>
 </html>
